// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateEntityDDL > check constraints > check constraints appear inside the CREATE TABLE body for TestChecked 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_iT-FyLzW-Ty" ON "TestChecked" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestChecked" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "age" INTEGER NOT NULL,
  "score" DOUBLE PRECISION NOT NULL,
  PRIMARY KEY ("id"),
  CONSTRAINT "chk_f6l8XZYrtK2" CHECK (score BETWEEN 0 AND 100),
  CONSTRAINT "age_positive" CHECK (age >= 0)
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > extensions auto-detection > adds pgvector extension when entity has a vector field 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [
    "CREATE EXTENSION IF NOT EXISTS vector;",
  ],
  "indexes": [],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "DdlVectorEntity" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "embedding" VECTOR(1536) NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > indexes > emits indexes for TestIndexed 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_name" ON "TestIndexed" ("name" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_0p2kye90VV7" ON "TestIndexed" ("email" ASC, "name" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_-8kqES9p2gF" ON "TestIndexed" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestIndexed" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "email" TEXT NOT NULL,
  PRIMARY KEY ("id"),
  CONSTRAINT "unique_email" UNIQUE ("email")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > many-to-many join tables > emits join table DDL for TestCourse (owning side) 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_z58Ij1Xi9Mi" ON "test_course_x_test_student" ("testStudentId");",
    "CREATE INDEX IF NOT EXISTS "idx_8sshwl9KWJG" ON "TestCourse" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestCourse" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  PRIMARY KEY ("id")
);",
    "CREATE TABLE IF NOT EXISTS "test_course_x_test_student" (
  "testCourseId" UUID NOT NULL REFERENCES "TestCourse" ("id") ON DELETE CASCADE ON UPDATE CASCADE,
  "testStudentId" UUID NOT NULL REFERENCES "TestStudent" ("id") ON DELETE CASCADE ON UPDATE CASCADE,
  PRIMARY KEY ("testCourseId", "testStudentId")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > relation entities (full DDL) > generates full DDL for TestArticle (ManyToOne, owning) 1`] = `
{
  "comments": [],
  "constraints": [
    "DO $$ BEGIN ALTER TABLE "TestArticle" ADD CONSTRAINT "fk_pNTj5bHp-kM" FOREIGN KEY ("authorId") REFERENCES "TestAuthor" ("id") ON DELETE NO ACTION ON UPDATE NO ACTION; EXCEPTION WHEN duplicate_object THEN NULL; END $$;",
  ],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_WtsgpsvT-zV" ON "TestArticle" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestArticle" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "title" TEXT NOT NULL,
  "authorId" UUID NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > relation entities (full DDL) > generates full DDL for TestAuthor (OneToMany, inverse) 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_aYybfGKVvb4" ON "TestAuthor" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestAuthor" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > relation entities (full DDL) > generates full DDL for TestProfile (inverse OneToOne) 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_Jwbf8mzOsJ-" ON "TestProfile" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestProfile" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "bio" TEXT NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > relation entities (full DDL) > generates full DDL for TestUserWithProfile (owning OneToOne) 1`] = `
{
  "comments": [],
  "constraints": [
    "DO $$ BEGIN ALTER TABLE "TestUserWithProfile" ADD CONSTRAINT "fk_f2qdLLdp2uo" FOREIGN KEY ("profileId") REFERENCES "TestProfile" ("id") ON DELETE NO ACTION ON UPDATE NO ACTION; EXCEPTION WHEN duplicate_object THEN NULL; END $$;",
  ],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_F699ggiNlTN" ON "TestUserWithProfile" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestUserWithProfile" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "profileId" UUID,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > schema creation > emits CREATE SCHEMA when entity has a namespace decorator 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [],
  "schemas": [
    "CREATE SCHEMA IF NOT EXISTS "analytics";",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "analytics"."DdlNamespacedEntity" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "label" TEXT NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > schema creation > emits CREATE SCHEMA when namespace is in options 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_bt1of5AP7El" ON "reports"."TestUser" ("id" ASC, "version" ASC);",
  ],
  "schemas": [
    "CREATE SCHEMA IF NOT EXISTS "reports";",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "reports"."TestUser" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "email" TEXT,
  "age" INTEGER DEFAULT 0 NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > simple entities > generates full DDL for TestScopedEntity (scope field) 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_50yeYHPVnt0" ON "TestScopedEntity" ("id" ASC, "scope" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_yiwk8HzBYqg" ON "TestScopedEntity" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestScopedEntity" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "scope" TEXT NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "label" TEXT NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > simple entities > generates full DDL for TestSoftDelete (delete/expiry date fields) 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_3xOgrWBqPK-" ON "TestSoftDelete" ("id" ASC, "deletedAt" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_LoS0nmZre_e" ON "TestSoftDelete" ("id" ASC, "deletedAt" ASC, "expiresAt" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_zSVCOXEnTUO" ON "TestSoftDelete" ("id" ASC, "deletedAt" ASC, "version" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_z4gm6gnQd0d" ON "TestSoftDelete" ("id" ASC, "deletedAt" ASC, "expiresAt" ASC, "version" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_e9Fpqrz7FTn" ON "TestSoftDelete" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestSoftDelete" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "deletedAt" TIMESTAMPTZ(3),
  "expiresAt" TIMESTAMPTZ(3),
  "name" TEXT NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > simple entities > generates full DDL for TestUser 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_bt1of5AP7El" ON "TestUser" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestUser" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "email" TEXT,
  "age" INTEGER DEFAULT 0 NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL > simple entities > generates full DDL for TestVersionKeyed (composite PK) 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestVersionKeyed" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "versionId" UUID DEFAULT gen_random_uuid() NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  PRIMARY KEY ("id", "versionId")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL check constraints check constraints appear inside the CREATE TABLE body for TestChecked 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_iT-FyLzW-Ty" ON "TestChecked" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestChecked" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "age" INTEGER NOT NULL,
  "score" DOUBLE PRECISION NOT NULL,
  PRIMARY KEY ("id"),
  CONSTRAINT "chk_f6l8XZYrtK2" CHECK (score BETWEEN 0 AND 100),
  CONSTRAINT "age_positive" CHECK (age >= 0)
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL extensions auto-detection adds pgvector extension when entity has a vector field 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [
    "CREATE EXTENSION IF NOT EXISTS vector;",
  ],
  "indexes": [],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "DdlVectorEntity" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "embedding" VECTOR(1536) NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL indexes emits indexes for TestIndexed 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_name" ON "TestIndexed" ("name" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_0p2kye90VV7" ON "TestIndexed" ("email" ASC, "name" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_-8kqES9p2gF" ON "TestIndexed" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestIndexed" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "email" TEXT NOT NULL,
  PRIMARY KEY ("id"),
  CONSTRAINT "unique_email" UNIQUE ("email")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL many-to-many join tables emits join table DDL for TestCourse (owning side) 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_z58Ij1Xi9Mi" ON "test_course_x_test_student" ("testStudentId");",
    "CREATE INDEX IF NOT EXISTS "idx_8sshwl9KWJG" ON "TestCourse" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestCourse" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  PRIMARY KEY ("id")
);",
    "CREATE TABLE IF NOT EXISTS "test_course_x_test_student" (
  "testCourseId" UUID NOT NULL REFERENCES "TestCourse" ("id") ON DELETE CASCADE ON UPDATE CASCADE,
  "testStudentId" UUID NOT NULL REFERENCES "TestStudent" ("id") ON DELETE CASCADE ON UPDATE CASCADE,
  PRIMARY KEY ("testCourseId", "testStudentId")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL relation entities (full DDL) generates full DDL for TestArticle (ManyToOne, owning) 1`] = `
{
  "comments": [],
  "constraints": [
    "DO $$ BEGIN ALTER TABLE "TestArticle" ADD CONSTRAINT "fk_pNTj5bHp-kM" FOREIGN KEY ("authorId") REFERENCES "TestAuthor" ("id") ON DELETE NO ACTION ON UPDATE NO ACTION; EXCEPTION WHEN duplicate_object THEN NULL; END $$;",
  ],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_WtsgpsvT-zV" ON "TestArticle" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestArticle" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "title" TEXT NOT NULL,
  "authorId" UUID NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL relation entities (full DDL) generates full DDL for TestAuthor (OneToMany, inverse) 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_aYybfGKVvb4" ON "TestAuthor" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestAuthor" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL relation entities (full DDL) generates full DDL for TestProfile (inverse OneToOne) 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_Jwbf8mzOsJ-" ON "TestProfile" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestProfile" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "bio" TEXT NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL relation entities (full DDL) generates full DDL for TestUserWithProfile (owning OneToOne) 1`] = `
{
  "comments": [],
  "constraints": [
    "DO $$ BEGIN ALTER TABLE "TestUserWithProfile" ADD CONSTRAINT "fk_f2qdLLdp2uo" FOREIGN KEY ("profileId") REFERENCES "TestProfile" ("id") ON DELETE NO ACTION ON UPDATE NO ACTION; EXCEPTION WHEN duplicate_object THEN NULL; END $$;",
  ],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_F699ggiNlTN" ON "TestUserWithProfile" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestUserWithProfile" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "profileId" UUID,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL schema creation emits CREATE SCHEMA when entity has a namespace decorator 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [],
  "schemas": [
    "CREATE SCHEMA IF NOT EXISTS "analytics";",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "analytics"."DdlNamespacedEntity" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "label" TEXT NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL schema creation emits CREATE SCHEMA when namespace is in options 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_bt1of5AP7El" ON "reports"."TestUser" ("id" ASC, "version" ASC);",
  ],
  "schemas": [
    "CREATE SCHEMA IF NOT EXISTS "reports";",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "reports"."TestUser" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "email" TEXT,
  "age" INTEGER DEFAULT 0 NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL simple entities generates full DDL for TestScopedEntity (scope field) 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_50yeYHPVnt0" ON "TestScopedEntity" ("id" ASC, "scope" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_yiwk8HzBYqg" ON "TestScopedEntity" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestScopedEntity" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "scope" TEXT NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "label" TEXT NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL simple entities generates full DDL for TestSoftDelete (delete/expiry date fields) 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_3xOgrWBqPK-" ON "TestSoftDelete" ("id" ASC, "deletedAt" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_LoS0nmZre_e" ON "TestSoftDelete" ("id" ASC, "deletedAt" ASC, "expiresAt" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_zSVCOXEnTUO" ON "TestSoftDelete" ("id" ASC, "deletedAt" ASC, "version" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_z4gm6gnQd0d" ON "TestSoftDelete" ("id" ASC, "deletedAt" ASC, "expiresAt" ASC, "version" ASC);",
    "CREATE INDEX IF NOT EXISTS "idx_e9Fpqrz7FTn" ON "TestSoftDelete" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestSoftDelete" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "deletedAt" TIMESTAMPTZ(3),
  "expiresAt" TIMESTAMPTZ(3),
  "name" TEXT NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL simple entities generates full DDL for TestUser 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_bt1of5AP7El" ON "TestUser" ("id" ASC, "version" ASC);",
  ],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestUser" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "email" TEXT,
  "age" INTEGER DEFAULT 0 NOT NULL,
  PRIMARY KEY ("id")
);",
  ],
  "triggers": [],
  "types": [],
}
`;

exports[`generateEntityDDL simple entities generates full DDL for TestVersionKeyed (composite PK) 1`] = `
{
  "comments": [],
  "constraints": [],
  "extensions": [],
  "indexes": [],
  "schemas": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "TestVersionKeyed" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "versionId" UUID DEFAULT gen_random_uuid() NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  PRIMARY KEY ("id", "versionId")
);",
  ],
  "triggers": [],
  "types": [],
}
`;
